force-app/main/default/objects/DD_Time_Out__c/DD_Time_Out__c.object-meta.xml
<CustomObject>
    <label>DD Time Out</label>
    <nameField>
        <displayFormat>DDAC-{000000}</displayFormat>
        <label>DD Time Out ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DD Time Out</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>