force-app/main/default/objects/DD_Time_Out__c/fields/BH_Elapsed__c.field-meta.xml
<CustomField>
    <fullName>BH_Elapsed__c</fullName>
    <formula>if(ISBLANK(TimeOut_BH__c), &#39;&#39;, 
TEXT(ROUND(TimeOut_BH__c,2)) + &#39; hours (&#39; + TEXT(ROUND(TimeOut_BH__c/8.0,1)) + &#39; days)&#39;)</formula>
    <label>Elapsed Business Hours</label>
    <type>Text</type>
</CustomField>