force-app/main/default/objects/DD_Time_Out__c/fields/BH_Reg_Value__c.field-meta.xml
<CustomField>
    <fullName>BH_Reg_Value__c</fullName>
    <formula>CASE(Time_Out_Type__c, 
&quot;On Hold&quot;, Registration__r.BH_OnHold__c,
&quot;Awaiting Client&quot;, Registration__r.BH_AwaitingClient__c,
&quot;Needs More Time&quot;, Registration__r.BH_NeedsMoreTime__c,
&quot;Non Responsive&quot;, Registration__r.BH_NonResponsive__c,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Hours - Reg Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>