force-app/main/default/objects/DD_Time_Out__c/fields/BH_Start_Value__c.field-meta.xml
<CustomField>
    <fullName>BH_Start_Value__c</fullName>
    <label>Business Hours - Start Value</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>