force-app/main/default/objects/DD_Time_Out__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <label>Registration</label>
    <referenceTo>Registration__c</referenceTo>
    <relationshipLabel>DD Time Out</relationshipLabel>
    <relationshipName>DD_Time_Out</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>