force-app/main/default/objects/DD_Time_Out__c/fields/Registration_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Registration_Snapshot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration Snapshot</label>
    <referenceTo>Registration_Snapshot__c</referenceTo>
    <relationshipLabel>DD Time Out</relationshipLabel>
    <relationshipName>DD_Time_Out</relationshipName>
    <type>Lookup</type>
</CustomField>