force-app/main/default/objects/DD_Time_Out__c/fields/Return_to_AML__c.field-meta.xml
<CustomField>
    <fullName>Return_to_AML__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return to AML</label>
    <type>Checkbox</type>
</CustomField>