force-app/main/default/objects/DD_Time_Out__c/fields/Time_Out_Type__c.field-meta.xml
<CustomField>
    <fullName>Time_Out_Type__c</fullName>
    <label>Time Out Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Client</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Non Responsive</fullName>
            </value>
            <value>
                <fullName>Needs More Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>