force-app/main/default/objects/DD_Time_Out__c/fields/TimeOut_BH__c.field-meta.xml
<CustomField>
    <fullName>TimeOut_BH__c</fullName>
    <formula>if(ISBLANK(End_Date__c), BH_Reg_Value__c - BH_Start_Value__c, BH_End_Value__c - BH_Start_Value__c)</formula>
    <label>Time Out Business Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>