force-app/main/default/objects/DD_Time_Out__c/fields/Trading_As__c.field-meta.xml
<CustomField>
    <fullName>Trading_As__c</fullName>
    <formula>Registration__r.Account__r.Trading_As__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trading As</label>
    <type>Text</type>
</CustomField>