force-app/main/default/objects/DD_Time_Out__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>Trading_As__c</columns>
    <columns>NAME</columns>
    <columns>Time_Out_Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Return_to_AML__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>