force-app/main/default/objects/DD_Time_Out__c/listViews/All_On_Hold.listView-meta.xml
<ListView>
    <fullName>All_On_Hold</fullName>
    <columns>NAME</columns>
    <columns>Time_Out_Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Return_to_AML__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Return_to_AML__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Time_Out_Type__c</field>
        <operation>equals</operation>
        <value>On Hold</value>
    </filters>
    <label>All DDs On Hold</label>
</ListView>